--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -14,3 +14,15 @@ class="statcounter"
 src="http://c.statcounter.com/9031068/0/bc4e01bb/1/"
 alt="web analytics"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137583213-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137583213-1');
+</script>
+
