--- a/files/notebook.css
+++ b/files/notebook.css
@@ -1,3 +1,5 @@
+
+<style>
 @import url('http://fonts.googleapis.com/css?family=Crimson+Text');
 @import url('http://fonts.googleapis.com/css?family=Source+Code+Pro');
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+JP");
@@ -107,3 +109,4 @@ th, td {
       border-collapse: collapse;
       border-width:3px;
     }
+    </style>
